force-app/main/default/objects/Stripe_Payments__c/Stripe_Payments__c.object-meta.xml
<CustomObject>
    <label>Stripe Payment</label>
    <nameField>
        <label>Stripe Payments Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stripe Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>