force-app/main/default/objects/Stripe_Payments__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Stripe Payments</relationshipLabel>
    <relationshipName>Stripe_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>