force-app/main/default/objects/Stripe_Payments__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Stripe Payments</relationshipLabel>
    <relationshipName>Stripe_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>