force-app/main/default/objects/Stripe_Payments__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment</label>
    <referenceTo>Payment__c</referenceTo>
    <relationshipLabel>Stripe Payments</relationshipLabel>
    <relationshipName>Stripe_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>