force-app/main/default/objects/Stripe_Payments__c/fields/Receipt__c.field-meta.xml
<CustomField>
    <fullName>Receipt__c</fullName>
    <label>Receipt</label>
    <type>Url</type>
</CustomField>