force-app/main/default/objects/Stripe_Payments__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Applied__c</columns>
    <columns>Invoice__c</columns>
    <columns>Order__c</columns>
    <columns>Quote__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Payment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Quote__c</field>
        <operation>equals</operation>
        <value>Q-191732</value>
    </filters>
    <label>All</label>
</ListView>