force-app/main/default/objects/Stripe_Payments__c/listViews/Spree_Order_Payments.listView-meta.xml
<ListView>
    <fullName>Spree_Order_Payments</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Applied__c</columns>
    <columns>Invoice__c</columns>
    <columns>Order__c</columns>
    <columns>Quote__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Payment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Quote__c</field>
        <operation>equals</operation>
    </filters>
    <label>Spree Order Payments</label>
</ListView>